--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,9 +1,20 @@
+@media (max-width: 1700px) {
+	.contact-slider {
+		&__img {
+			width: 100%;
+		}
+	}
+}
+
 @media (max-width: 1366px) {
 	.collection {
 		grid-template-columns: repeat(3, 1fr);
 		&__images {
 			width: 100%;
 		}
+	}
+	.map {
+		margin-top: 0;
 	}
 }
 
@@ -16,6 +27,33 @@
 		&__slider-img {
 			height: 640px;
 		}
+	}
+	.contact-slider {
+		&__img {
+			height: 240px;
+		}
+	}
+}
+
+@media (max-width: 1040px) {
+	.blog {
+		&__inner {
+			flex-wrap: wrap;
+		}
+		&__items {
+			max-width: 100%;
+		}
+		&__item-img {
+			width: 100%;
+			max-width: 100%;
+		}
+	}
+
+	.aside {
+		width: 100%;
+		margin-left: 0;
+		order: -1;
+		margin-bottom: 50px;
 	}
 }
 
@@ -73,6 +111,13 @@
 		}
 		&__item--production {
 			margin-left: 50px;
+		}
+	}
+	.contact {
+		.contact__social,
+		&__box,
+		&__form {
+			padding-left: 0;
 		}
 	}
 }
@@ -142,6 +187,11 @@
 			grid-template-columns: repeat(3, 1fr);
 		}
 	}
+	.map {
+		iframe {
+			height: 375px;
+		}
+	}
 }
 
 @media (max-width: 650px) {
@@ -197,9 +247,22 @@
 			margin-bottom: 20px;
 		}
 	}
+	.contact {
+		&__form-input {
+			width: 100%;
+		}
+	}
+	.slick-dots li {
+		margin: 0 5px;
+	}
 }
 
 @media (max-width: 540px) {
+	.menu {
+		&__list-link--active::after {
+			display: none;
+		}
+	}
 	.logo {
 		order: -1;
 		position: relative;
@@ -272,6 +335,54 @@
 			line-height: 48px;
 		}
 	}
+	.blog__category-title,
+	.recent-posts__title,
+	.blog__tags-title,
+	.blog__blockquote-author {
+		font-size: 16px;
+		line-height: 23px;
+	}
+	.blog {
+		&__item-title {
+			font-size: 24px;
+			line-height: 38px;
+		}
+	}
+	.blog-one {
+		&__links {
+			padding: 30px 0;
+		}
+		&__link {
+			span {
+				display: none;
+			}
+		}
+		&__form-input {
+			width: 100%;
+		}
+		&__comments-name,
+		&__form-title {
+			font-size: 16px;
+			line-height: 27px;
+		}
+		&__comments-item {
+			flex-wrap: wrap;
+		}
+		&__comments-avatar {
+			width: 45px;
+			height: 45px;
+		}
+		&__comments-name,
+		&__comments-date {
+			margin-left: 55px;
+		}
+		&__comments-info {
+			margin-top: -46px;
+		}
+		&__reply {
+			margin-left: 0;
+		}
+	}
 	.works-path {
 		&__item-title {
 			font-size: 16px;
@@ -322,5 +433,16 @@
 			margin-left: 0;
 			margin-top: 10px;
 		}
+	}
+	.contact-slider {
+		&__img {
+			height: 310px;
+		}
+	}
+	.slick-dots li {
+		margin: 0 1px;
+	}
+	.blog-one__item blockquote {
+		padding: 0 20px;
 	}
 }
