--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -840,6 +840,9 @@
 .map {
 	margin-top: -53px;
 	margin-bottom: 50px;
+	iframe {
+		height: 578px;
+	}
 }
 
 .contact {
@@ -971,7 +974,7 @@
 		top: 0;
 		bottom: 0;
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
 		align-items: center;
 		background-color: rgba(#fff, 0.6);
 		color: $title;
